--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,14 +4,14 @@ on:
     branches: [main]
 
 jobs:
-  hello:
-    name: hello
+  typecheck-lint:
+    name: typecheck-lint
     runs-on: ubuntu-latest
     steps:
       - name: Set up Dagger
         uses: dagger/dagger-for-github@8.0.0
         with:
-          version: 'latest'
+          version: 'v0.18.2'
       - name: Check TypeScript and Lint
         run: container |
           from node:latest |
