fix: add pnpm version check step in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
           with-exec -- npm install -g pnpm@latest |
           with-directory /src . --exclude node_modules |
           with-workdir /src |
+          with-exec -- pnpm --version |
           with-exec pnpm install |
           with-exec -- pnpm run ts:check |
           with-exec -- pnpm run lint
