--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
         uses: dagger/dagger-for-github@8.0.0
         with:
           version: 'latest'
+          verb: shell
       - name: Check TypeScript and Lint
         run: container |
           from node:latest |
@@ -23,4 +24,3 @@ jobs:
           with-exec -- pnpm install --frozen-lockfile |
           with-exec -- pnpm run ts:check |
           with-exec -- pnpm run lint
-        shell: dagger {0}
