fix: refactor CI workflow to include ls -l command for better file visibility

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,13 @@ jobs:
         with:
           version: 'latest'
           verb: shell
-      - name: Check TypeScript and Lint
-        run: container |
-          from node:latest |
-          with-exec -- npm install -g pnpm@latest |
-          with-directory /src . --exclude node_modules |
-          with-workdir /src |
-          with-exec -- ls -l |
-          with-exec -- pnpm --version |
-          with-exec -- pnpm install --frozen-lockfile |
-          with-exec -- pnpm run ts:check |
-          with-exec -- pnpm run lint
+          args: container |
+            from node:latest |
+            with-exec -- npm install -g pnpm@latest |
+            with-directory /src . --exclude node_modules |
+            with-workdir /src |
+            with-exec -- ls -l |
+            with-exec -- pnpm --version |
+            with-exec -- pnpm install --frozen-lockfile |
+            with-exec -- pnpm run ts:check |
+            with-exec -- pnpm run lint
