--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,12 @@ jobs:
     name: typecheck-lint
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: Set up Dagger
         uses: dagger/dagger-for-github@8.0.0
         with:
           version: 'latest'
-      - name: ls
-        run: ls -l
       - name: Check TypeScript and Lint
         run: container |
           from node:latest |
